# wildlife-camera

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml
crittercam/: config.py  db.py  models.py
crittercam/migrations/: 001_init.sql  002_thumb_bbox.sql
crittercam/tracker/: capture.py  detector.py  events.py  main.py  publisher.py  recorder.py  storage.py  tracking.py
crittercam/training/: __init__.py  dataset.py  finetune.py
crittercam/web/: clips.py  live.py  main.py
crittercam/web/static/: index.html
tests/: conftest.py  test_detector.py  test_events.py  test_pipeline.py  test_recorder.py  test_storage.py  test_tracking.py  test_training.py  test_web.py  util.py
